--- a/HTML&CSS/css/layout.css
+++ b/HTML&CSS/css/layout.css
@@ -16,7 +16,7 @@
     between the border and content area of an element 
 */
 
-p {
+.p {
     margin:20px; /*trbl vertical horizontal */
     padding: 0;
 }
@@ -56,3 +56,15 @@ span.box{
     display: inline-block;
 }
 
+
+
+/* Overflow */
+
+.overflow-box{
+    border: 3px solid gold;
+    width: 150px;
+    height: 150px;
+    overflow: hidden auto;
+    /* overflow-x: ; */
+    /* overflow-y: ; */
+}
