--- a/HTML&CSS/css/layout.css
+++ b/HTML&CSS/css/layout.css
@@ -271,3 +271,148 @@ div.measurement-box {
     flex-grow: 2;
     flex-shrink: 0;
 }
+
+
+/* Grid 
+    justify-items : along the horizontal axis
+    align-items : along the vertical axis
+
+    content : represents the entire grid, the entire content
+    items : represents the indivisual items in grid
+
+    Gap
+    row-gap
+    column-gap
+    gap shorhand for row-gap and column-gap
+
+    placing items
+    grid-row
+    grid-column
+    grid-area
+
+    placeing items in named areas
+    grid-template-areas
+    grid-area
+*/
+.grid-container{
+    display: grid;
+    /* grid-template-rows: repeat(3, 100px); */
+    /* grid-template-columns: repeat(2, 100px); */
+    grid-template: 100px auto 100px / 30fr 70fr;
+    /* 100px 30% 70% will result in exceeding the container
+    Use fr instead of %
+    % = % of the width of the container
+    fr == fraction of the available space 
+    30fr = 30% ( of width of the container-100px) 
+    */
+    /* rows/ columns */
+    border: 3px solid lightgray;
+    /* justify-items: stretch; */
+    /* align-items: stretch; */
+/*
+    default value
+    justify-items : stretch; 
+    align-items : stretch; 
+    if there is no width and height we set,
+    element is going to stretch to fill the containing cell)
+*/
+    /* justify-content: center;  */
+    /*horizontally centered*/
+    /* align-content: center;  */
+    /*vertically centered*/
+    height: 100vh;
+    row-gap: 10px;
+    column-gap: 10px;
+    gap: 15px;
+
+    grid-template-areas: 
+        "header  header" 
+        "sidebar main" 
+        ".      footer";
+}
+
+.grid-box{
+    /* width: 5rem; */
+    /* height: 5rem; */
+    background-color: gold;
+}
+
+.grid-box-one{
+    /* justify-self: flex-start; */
+    /* align-self: flex-end; */
+    /* grid-column: 1/-1 ;
+    grid-column: 1/3 ;
+    grid-column: 1/ span 2 ;
+    grid-row: 2/4; */
+    /* start/ end/ */
+    /* row/ column */
+    /* first two numbers represent start */
+    /* grid-area: 1 / 1 / 1 / 3; */
+    grid-area: header;
+}
+
+.grid-box-four{
+    grid-area: footer;
+}
+
+
+/* hiding elements */
+
+.first{
+    /* display: none; */
+}
+.first{
+    /* visibility: hidden; */
+}
+
+/* Media queries 
+    Responsibe Design
+    Mobile first approach
+    its much easier to build the website for mobile
+
+    need to decide breakpoints
+    can easily google common breakpoints
+    but they are usually based on devices on market
+    and devices on markey always can change.
+    Design should always look good.
+
+*/
+
+.mq-container{
+    display: flex;
+    flex-direction: column;
+}
+
+
+.mq-box{
+    background-color: gold;
+    padding: 1rem;
+}
+.mq-box:nth-of-type(2){
+    background-color: dodgerblue;
+}
+
+/* @media screen and (min-width: 600px) and (max-width:900px){ */
+@media screen and (min-width: 600px){
+    .mq-container{
+        flex-direction: row;
+    }
+}
+@media screen and (min-width: 900px){
+    .mq-container{
+        flex-direction: row;
+    }
+    .mq-box{
+        background-color: white;
+    }
+}
+
+@media print{
+    body{
+        font-size: 12pt;
+    }
+
+    .md-box{
+        padding: 0.5cm;
+    }
+}
