--- a/HTML&CSS/css/typography.css
+++ b/HTML&CSS/css/typography.css
@@ -62,7 +62,7 @@ body{
 p{
     font-weight: normal;
     /* font-style: italic; */
-    font-size: 1rem;
+    /* font-size: 1rem; */
     color: #111;
 }
 
@@ -132,4 +132,84 @@ h1{
 
 
 
-/* Vertical Spacing */
+/* Vertical Spacing
+
+*/
+
+h1,h2,h3,h4,h5,h6{
+
+}
+body{
+    font-size: 1rem;
+    line-height: 1.5;
+    /* line-height is usually 1.5rem/ 1.5 
+        line-height:1.5;
+        without any unit
+        browser multiplies values by the font size
+    */
+}
+h1{
+    margin: 3rem 0 1rem;
+}
+
+
+/* Horizontal Spacing
+    letter-spacing
+    word-spacing
+    width
+
+    Ideal line length
+    should be between 50 ~ 70 characters
+*/
+
+
+body{
+    /* letter-spacing: 1px; */
+    /* use px instead of rem */
+    
+    /* word-spacing: 5px; */ 
+}
+
+p{
+    width: 50ch; 
+    /* relative to the width of the zero character */
+    /* 50ch == 50 zeros == 60~70 characters*/
+}
+
+
+/* Formatting Text 
+    text-align
+    text-indent
+    text-decoration
+    text-transform
+    white-space
+    column-*
+    direction
+    etc
+*/
+
+p{
+    /* text-align: right; */
+    /* text-align: justify; */
+    /* do not use justify its hard to read */
+    /* text-decoration: line-through; */
+    /* text-transform: capitalize; */
+
+    /* border: 3px solid gold;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; */
+    /* line-clamp: 3; yet experimental, not recommended to use */
+
+    /* column-count: 2;
+    column-gap: 2rem;
+    column-rule: 3px dotted #999; */
+
+    /* direction: rtl; */
+}
+html{
+    /* direction: rtl; */
+}
+p + P{
+    text-indent: 1rem;
+}
